...
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/img_user"
            app:layout_constraintTop_toTopOf="@+id/img_user"
            app:layout_constraintBottom_toBottomOf="@+id/img_user">

            <ImageView
                android:id="@+id/img_eyes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/dc_eyes_open"
                app:srcCompat="@drawable/ic_eye_closed" />
...
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_conta"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:srcCompat="@drawable/ic_flecha_direita" />

        <TextView
            android:id="@+id/tv_saldo_conta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            tools:text="@string/txt_balance"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
...
