...

    <!-- Activity Main -->
    <string name="txt_greetings">Olá, %s</string>

    <string name="txt_account">Conta</string>
    <string name="txt_balance">R$1.752,90</string>
    <string name="txt_balance_hidden">R$---------</string>

    <string name="txt_pix">Área Pix</string>
    <string name="txt_pay">Pagar</string>
    <string name="txt_transfer">Trasferir</string>
    <string name="txt_deposit">Depositar</string>
    <string name="txt_recharge">Recarregar</string>
...
